# flog

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: cli.rs  configuration.rs  log.rs  main.rs
src/log/: inquires.rs  log_buffer.rs  mod.rs  printing.rs
src/repo/: branch_collecting.rs  mod.rs  repo_scanning.rs
