[package]
name = "flog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
git2 = { version = "0.15.0", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
inquire = { version = "0.5.2", features = ["date"] }
clap = { version = "4.0.32", features = ["derive"] }
directories = "4.0.1"
chrono = "0.4.23"
arboard = { version = "3.2.0", default-features = false }
prettytable-rs = "0.10.0"
